# collision2d

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  renovate.json
.github/workflows/: check.yml  create-todo-issues.yml
src/: aabb.rs  lib.rs
tests/: aabb_collision_spec.rs
