[package]
name = "collision2d"
version = "0.2.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/jcornaz/collision2d"
description = "A simple 2d collision detection library "
categories = ["no-std", "game-development"]
keywords = ["no_std", "gamedev", "collision", "2d", "geometry"]

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
libm = ["dep:libm"]
aabb = []

[dependencies]
libm = { version = "0.2.8", default-features = false, optional = true }

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }

[lints.rust]
unsafe_code = "deny"
private_interfaces = "warn"
private_bounds = "warn"
missing_docs = "warn"

[lints.clippy]
exhaustive_enums = "warn"
exhaustive_structs = "warn"
pedantic = { level = "warn", priority = -1 }
